Changed the default theme to the dark variant, refactoring was made

--- a/NevernoteAPI/ClientApp/src/app/components/actionbar/actionbar.component.html
+++ b/NevernoteAPI/ClientApp/src/app/components/actionbar/actionbar.component.html
@@ -16,7 +16,7 @@
     <i class="fas fa-star"></i>
   </button>
 
-  <a href="https://github.com/jasonwj96/nevernote" target="_blank">
+  <a href="https://github.com/jasonwj96/nevernoteAPI" target="_blank">
     <button id="github-btn">
       <i class="fab fa-github"></i>
     </button>
