Now fonts are loaded from local sources

--- a/NevernoteAPI/ClientApp/src/app/components/actionbar/actionbar.component.scss
+++ b/NevernoteAPI/ClientApp/src/app/components/actionbar/actionbar.component.scss
@@ -43,7 +43,7 @@
   border: none;
   outline: none;
   padding: 20px 20px 50px 20px;
-  font-family: 'Pacifico';
+  font-family: 'Pacifico Regular';
   font-weight: 400;
   font-size: 1.7em;
   transition: 0.2s color ease-in-out;
