--- a/NevernoteAPI/ClientApp/src/styles.scss
+++ b/NevernoteAPI/ClientApp/src/styles.scss
@@ -1,6 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 @import 'app/themes/light-theme';
+
+@font-face {
+  font-family: Montserrat;
+  src: url('fonts/Montserrat/Montserrat-Regular.ttf')
+}
+
+@font-face {
+  font-family: Pacifico Regular;
+  src: url('fonts/Pacifico/Pacifico-Regular.ttf');
+}
+
 html,
 body {
   margin: 0;
