Configured the connection to the database

--- a/NevernoteAPI/ClientApp/src/app/themes/_dark-theme.scss
+++ b/NevernoteAPI/ClientApp/src/app/themes/_dark-theme.scss
@@ -34,8 +34,8 @@ $notelist-option-color: #fff;
 $hover-color: #fff;
 $delete-color: #e90404;
 
-$placeholder-color: #111;
-$textarea-color: #111;
+$placeholder-color: #969696;
+$textarea-color: #ffffff;
 $tag-color: #fff;
 $tag-bg: #ffad17;
 $favorite-color: #ffad17;
