--- a/NevernoteAPI/ClientApp/src/app/app.component.scss
+++ b/NevernoteAPI/ClientApp/src/app/app.component.scss
@@ -1,7 +1,7 @@
 #dashboard {
-  display: flex;
+  display: inline-flex;
   flex-direction: row;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   padding: 0;
   margin: 0;
