--- a/NevernoteAPI/ClientApp/src/app/modules/workspace/components/editor/editor.component.scss
+++ b/NevernoteAPI/ClientApp/src/app/modules/workspace/components/editor/editor.component.scss
@@ -3,6 +3,7 @@
 @mixin editor {
   flex-direction: column;
   height: 100%;
+  width: auto;
   overflow: hidden;
   background-color: $primary;
 }
@@ -24,7 +25,7 @@
   border-bottom: $g-border-color solid $g-border-size;
   background-color: $primary;
   height: auto;
-  width: 100%;
+  width: auto;
   padding: 10px 40px 10px 20px;
   display: flex;
   flex-direction: row;
