--- a/NevernoteAPI/ClientApp/src/app/modules/workspace/components/notelist/notelist.component.html
+++ b/NevernoteAPI/ClientApp/src/app/modules/workspace/components/notelist/notelist.component.html
@@ -4,11 +4,11 @@
     <h1>MY TASKS</h1>
     <div id="notelist-header-controls">
       <h5> {{(noteService.getNotelist() | async)?.length}} tasks</h5>
-      <select name="Order" id="order-select">
+      <!-- <select name="Order" id="order-select">
         <option value="">Sort</option>
         <option value="A - Z">A - Z</option>
         <option value="Time">Time</option>
-      </select>
+      </select> -->
     </div>
   </div>
 
