--- a/NevernoteAPI/ClientApp/src/app/modules/workspace/components/notelist/notelist.component.html
+++ b/NevernoteAPI/ClientApp/src/app/modules/workspace/components/notelist/notelist.component.html
@@ -3,22 +3,28 @@
   <div id="notelist-header">
     <h1>MY TASKS</h1>
     <div id="notelist-header-controls">
-      <h5> {{(notelist$ | async)?.length}} tasks</h5>
+      <h5 *ngIf="notelist != null"> {{notelist?.length}} tasks</h5>
+      <h5 *ngIf="notelist == null">Loading</h5>
     </div>
   </div>
 
   <!-- Tasklist -->
   <div id="list">
-    <div *ngFor="let note of notelist$ | async | reverse">
+    <div *ngFor="let note of notelist | reverse">
       <app-task [note]="note"></app-task>
     </div>
 
-    <div id="emptyListDisplay" *ngIf="(notelist$ | async)?.length === 0">
+    <div id="emptyListDisplay" *ngIf="notelist?.length === 0">
       <i class="fab fa-fort-awesome-alt"></i>
       <p>Looks like your tasks are in another castle, Press the
         <span id="add-note-btn">
           <i class="fas fa-plus"></i>
         </span> icon to add a new task.
       </p>
+    </div>
+
+    <div id="loadingDisplay" *ngIf="notelist == null">
+      <i id="loadingSpinner" class="fas fa-cloud-download-alt"></i>
+      <p>Loading notes</p>
     </div>
   </div>
