--- a/NevernoteAPI/ClientApp/src/app/modules/workspace/components/notelist/notelist.component.scss
+++ b/NevernoteAPI/ClientApp/src/app/modules/workspace/components/notelist/notelist.component.scss
@@ -113,3 +113,25 @@
   margin: 3px;
   padding: 0;
 }
+
+@keyframes fadeInOut{
+  from {opacity: 0}
+}
+
+#loadingSpinner {
+  font-size: 2em;
+  animation: fadeInOut 1s alternate infinite;
+}
+
+#loadingDisplay {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+
+  p {
+    text-align: center;
+    display: block;
+  }
+}
